add controller+model+repo of client,fournisseur,article and Scategories

--- a/backend/backend-gestion-de-stock/pom.xml
+++ b/backend/backend-gestion-de-stock/pom.xml
@@ -69,6 +69,18 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!-- 		upload images -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+<!--         validation -->
+        <dependency>
+    		<groupId>javax.validation</groupId>
+    		<artifactId>validation-api</artifactId>
+    		<version>2.0.0.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
