--- a/frontend-gestion-de-stock/package.json
+++ b/frontend-gestion-de-stock/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,6 +21,13 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "bootstrap": "^4.5.2",
+    "ngx-bootstrap": "^6.1.0",
+    "ngx-toastr": "^13.0.1",
+    "angular-font-awesome": "^3.1.2",
+    "angular-material": "^1.1.21",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
